--- a/php56/Dockerfile
+++ b/php56/Dockerfile
@@ -1,1 +1,6 @@
 FROM php:5.6-fpm-alpine
+
+RUN apk add --update --no-cache tzdata && \
+    cp /usr/share/zoneinfo/Asia/Tokyo /etc/localtime && \
+    echo "Asia/Tokyo" > /etc/timezone && \
+    apk del tzdata
