--- a/php74/Dockerfile
+++ b/php74/Dockerfile
@@ -1,1 +1,6 @@
 FROM php:7.4-fpm-alpine3.13
+
+RUN apk add --update --no-cache tzdata && \
+    cp /usr/share/zoneinfo/Asia/Tokyo /etc/localtime && \
+    echo "Asia/Tokyo" > /etc/timezone && \
+    apk del tzdata
