--- a/php74/Dockerfile
+++ b/php74/Dockerfile
@@ -4,3 +4,40 @@ RUN apk add --update --no-cache tzdata && \
     cp /usr/share/zoneinfo/Asia/Tokyo /etc/localtime && \
     echo "Asia/Tokyo" > /etc/timezone && \
     apk del tzdata
+
+RUN apk add --update --no-cache \
+    curl-dev \
+    libxml2-dev \
+    postgresql-dev \
+    freetype-dev \
+    libpng-dev \
+    libjpeg-turbo-dev \
+    zip \
+    libzip-dev \
+    unzip \
+    gmp-dev \
+    oniguruma-dev
+
+RUN docker-php-source extract
+RUN cp /usr/src/php/ext/openssl/config0.m4 /usr/src/php/ext/openssl/config.m4
+RUN docker-php-ext-configure gd --with-freetype --with-jpeg
+RUN docker-php-ext-install pdo \
+    pdo_mysql \
+    mysqli \
+    pdo_pgsql \
+    pgsql \
+    mbstring \
+    bcmath \
+    curl \
+    ctype \
+    fileinfo \
+    xml \
+    json \
+    openssl \
+    gd \
+    zip \
+    gmp \
+    tokenizer \
+    opcache
+
+COPY ./php.ini /usr/local/etc/php/php.ini
