--- a/php56/php.ini
+++ b/php56/php.ini
@@ -26,3 +26,6 @@ opcache.interned_strings_buffer=8
 opcache.max_accelerated_files=4000
 opcache.revalidate_freq=1
 opcache.fast_shutdown=1
+
+[Mail]
+sendmail_path = "/usr/local/bin/mhsendmail --smtp-addr=mailhog:1025"
