--- a/php56/Dockerfile
+++ b/php56/Dockerfile
@@ -38,4 +38,8 @@ RUN docker-php-ext-install pdo \
     tokenizer \
     opcache
 
+RUN curl -sSL https://github.com/mailhog/mhsendmail/releases/download/v0.2.0/mhsendmail_linux_amd64 -o mhsendmail \
+    && chmod +x mhsendmail \
+    && mv mhsendmail /usr/local/bin/mhsendmail
+
 COPY ./php.ini /usr/local/etc/php/php.ini
