--- a/php74/Dockerfile
+++ b/php74/Dockerfile
@@ -45,3 +45,5 @@ RUN curl -sSL https://github.com/mailhog/mhsendmail/releases/download/v0.2.0/mhs
     && mv mhsendmail /usr/local/bin/mhsendmail
 
 COPY ./php.ini /usr/local/etc/php/php.ini
+
+COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
