--- a/php56/Dockerfile
+++ b/php56/Dockerfile
@@ -16,10 +16,10 @@ RUN apk add --update --no-cache \
     unzip \
     gmp-dev
 
-RUN docker-php-source extract
-RUN cp /usr/src/php/ext/openssl/config0.m4 /usr/src/php/ext/openssl/config.m4
-RUN docker-php-ext-configure gd --with-png-dir=/usr/include --with-jpeg-dir=/usr/include
-RUN docker-php-ext-install pdo \
+RUN docker-php-source extract \
+    && cp /usr/src/php/ext/openssl/config0.m4 /usr/src/php/ext/openssl/config.m4 \
+    && docker-php-ext-configure gd --with-png-dir=/usr/include --with-jpeg-dir=/usr/include \
+    && docker-php-ext-install pdo \
     pdo_mysql \
     mysqli \
     pdo_pgsql \
