--- a/php74/php.ini
+++ b/php74/php.ini
@@ -29,3 +29,10 @@ opcache.fast_shutdown=1
 
 [Mail]
 sendmail_path = "/usr/local/bin/mhsendmail --smtp-addr=mailhog:1025"
+
+[xdebug]
+xdebug.client_host = host.docker.internal
+xdebug.mode = debug
+xdebug.start_with_request = yes
+xdebug.client_port = 9000
+xdebug.discover_client_host = 0
