--- a/php56/php.ini
+++ b/php56/php.ini
@@ -29,3 +29,10 @@ opcache.fast_shutdown=1
 
 [Mail]
 sendmail_path = "/usr/local/bin/mhsendmail --smtp-addr=mailhog:1025"
+
+[xdebug]
+xdebug.remote_host = host.docker.internal
+xdebug.remote_enable = 1
+xdebug.remote_autostart = 1
+xdebug.remote_port = 9001
+xdebug.remote_connect_back = 0
