--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
     ports: 
       - ${PGSQL_PORT:-5432}:5432
     volumes:
-      - ./pgsql/data:/var/lib/postgresql/data
+      - pgsql:/var/lib/postgresql/data
     environment:
       - POSTGRES_USER=${PGSQL_USER:-user}
       - POSTGRES_PASSWORD=${PGSQL_PASS:-password}
@@ -42,3 +42,5 @@ services:
     ports:
       - ${MAIL_SMTP:-1025}:1025
       - ${MAIL_UI:-8025}:8025
+volumes: 
+  pgsql:
