nginx用の設定追加

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,10 @@ services:
       - ${WEB_SSL_PORT:-443}:443
     volumes: 
       - ./nginx/:/etc/nginx/conf.d/
+      - ${WORK_SPACE}:/var/www/html
+    depends_on:
+      - php56
+      - php74
   php56:
     build: ./php56
     volumes:
